WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115431
Cap max CALayer tree depth to avoid crashes
https://bugs.webkit.org/show_bug.cgi?id=115431
Summary
Cap max CALayer tree depth to avoid crashes
Simon Fraser (smfr)
Reported
2013-04-30 11:07:01 PDT
Cap max CALayer tree depth to avoid crashes
Attachments
Patch
(12.47 KB, patch)
2013-04-30 11:25 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-04-30 11:25:56 PDT
Created
attachment 200136
[details]
Patch
Tim Horton
Comment 2
2013-04-30 11:33:21 PDT
Comment on
attachment 200136
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=200136&action=review
> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:64 > +static const int cMaxLayerTreeDepth = 250;
I think the 'c' is unusual but you're just following this file.
Simon Fraser (smfr)
Comment 3
2013-04-30 22:03:27 PDT
http://trac.webkit.org/changeset/149388
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug