Cap max CALayer tree depth to avoid crashes https://bugs.webkit.org/show_bug.cgi?id=115431 <rdar://problem/13401861>

Source/WebCore:

Reviewed by Tim Horton.

Core Animation can crash if fed deeply nested layer trees.
Avoid this by capping CALayer tree depth at some empirically-determined
level.

Test: compositing/layer-creation/deep-tree.html

* platform/graphics/ca/GraphicsLayerCA.h:
(WebCore::GraphicsLayerCA::CommitState::CommitState): Add treeDepth to the CommitState.
* platform/graphics/ca/GraphicsLayerCA.cpp: Set cMaxLayerTreeDepth to 250
(WebCore::GraphicsLayerCA::flushCompositingStateForThisLayerOnly): We need a dummy CommitState
here. It is not expected that flushCompositingStateForThisLayerOnly() will be called for
a layer in the middle of the hierarchy, only for custom-managed leaf layers, so we don't try
to compute the correct tree depth.
(WebCore::GraphicsLayerCA::recursiveCommitChanges): Pass in the commitState. Since this is
copied for each frame, no need to decrement commitState.treeDepth.
(WebCore::GraphicsLayerCA::commitLayerChangesBeforeSublayers): Increment treeDepth once or
twice. If we've reached max, be sure to set the ChildrenChanged flag. We delay tree truncation
until commitLayerChangesAfterSublayers() since ChildrenChanged can be set again when children
are being processed.
(WebCore::GraphicsLayerCA::commitLayerChangesAfterSublayers):
(WebCore::GraphicsLayerCA::updateSublayerList): If we've hit max depth, just set
empty sublayers.

LayoutTests:

Reviewed by Tim Horton.

Test that makes a very deep tree. Should note crash, and should match
the reference.

* compositing/layer-creation/deep-tree-expected.html: Added.
* compositing/layer-creation/deep-tree.html: Added.

Canonical link: https://commits.webkit.org/133871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149388 268f45cc-cd09-0410-ab3c-d52691b4dbfc